[package]
name = "robust_product"
version = "0.1.0"
authors = ["Titus Tienaah <titus.intdxdt@gmail.com>"]
edition = "2018"

[dependencies]
robust_sum = { git = "https://github.com/intdxdt/robust_sum", branch = "master" }
robust_scale = { git = "https://github.com/intdxdt/robust_scale", branch = "master" }